syntax = "proto3";

package validator;

// The MTransaction service definition.
service MTransaction {
  // Sends message to be streamed back
  rpc TxStream(stream RequestMessageEnvelope) returns (stream ResponseMessageEnvelope) {}
}

message RequestMessageEnvelope {
  Pong pong = 1;
  Metrics metrics = 2;
}

// The response message envelope
message ResponseMessageEnvelope {
  Transaction transaction = 1;
  Ping ping = 2;
}

// The response Tx
message Transaction {
  string data = 1;
  string signature = 2;
  repeated string tpu = 3;
}

// The response Ping
message Ping {
  string id = 1;
}

// The request Pong
message Pong {
  string id = 1;
}

// The request Metrics
message Metrics {
  uint64 tx_received = 1;
  uint64 tx_forward_succeeded = 2;
  uint64 tx_forward_failed = 3;
  string version = 4;
  uint64 quic_forwarder_permits_used_max = 5;
  uint64 memory_physical = 6;
}
